--- a/Code_Llama_2_7B.ipynb
+++ b/Code_Llama_2_7B.ipynb
@@ -352,7 +352,7 @@
       },
       "outputs": [],
       "source": [
-        "generate_code(\"def factorial(\")"
+        "generate_code(\"def factorial(\")\n"
       ]
     },
     {
