Converted to something we got from Gorilla

--- a/DeepLearning_Microsoft_SemanticKernel/StartCooking.ipynb
+++ b/DeepLearning_Microsoft_SemanticKernel/StartCooking.ipynb
@@ -20,9 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The model 'T5ForConditionalGeneration' is not supported for text-generation. Supported models are ['BartForCausalLM', 'BertLMHeadModel', 'BertGenerationDecoder', 'BigBirdForCausalLM', 'BigBirdPegasusForCausalLM', 'BioGptForCausalLM', 'BlenderbotForCausalLM', 'BlenderbotSmallForCausalLM', 'BloomForCausalLM', 'CamembertForCausalLM', 'LlamaForCausalLM', 'CodeGenForCausalLM', 'CpmAntForCausalLM', 'CTRLLMHeadModel', 'Data2VecTextForCausalLM', 'ElectraForCausalLM', 'ErnieForCausalLM', 'FalconForCausalLM', 'GitForCausalLM', 'GPT2LMHeadModel', 'GPT2LMHeadModel', 'GPTBigCodeForCausalLM', 'GPTNeoForCausalLM', 'GPTNeoXForCausalLM', 'GPTNeoXJapaneseForCausalLM', 'GPTJForCausalLM', 'LlamaForCausalLM', 'MarianForCausalLM', 'MBartForCausalLM', 'MegaForCausalLM', 'MegatronBertForCausalLM', 'MistralForCausalLM', 'MptForCausalLM', 'MusicgenForCausalLM', 'MvpForCausalLM', 'OpenLlamaForCausalLM', 'OpenAIGPTLMHeadModel', 'OPTForCausalLM', 'PegasusForCausalLM', 'PersimmonForCausalLM', 'PLBartForCausalLM', 'ProphetNetForCausalLM', 'QDQBertLMHeadModel', 'ReformerModelWithLMHead', 'RemBertForCausalLM', 'RobertaForCausalLM', 'RobertaPreLayerNormForCausalLM', 'RoCBertForCausalLM', 'RoFormerForCausalLM', 'RwkvForCausalLM', 'Speech2Text2ForCausalLM', 'TransfoXLLMHeadModel', 'TrOCRForCausalLM', 'XGLMForCausalLM', 'XLMWithLMHeadModel', 'XLMProphetNetForCausalLM', 'XLMRobertaForCausalLM', 'XLMRobertaXLForCausalLM', 'XLNetLMHeadModel', 'XmodForCausalLM'].\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -55,7 +62,8 @@
     "\n",
     "kernel = sk.Kernel()\n",
     "\n",
-    "kernel.add_text_completion_service(\"huggingface\", HuggingFaceTextCompletion(\"gpt2\", task=\"text-generation\"))\n",
+    "kernel.add_text_completion_service(\"huggingface\", HuggingFaceTextCompletion(\"EleutherAI/gpt-j-6B\", task=\"text-generation\"))\n",
+    "\n",
     "\n",
     "print(\"You made an open source kernel using an open source AI model!\")\n",
     "\n",
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -151,31 +159,7 @@
        "thousand dollars a year, that will be a huge deal to him.\n",
        "\n",
        "\n",
-       "Summarize the content above in less than 140 characters.\n",
-       "\n",
-       "I think that this is a very interesting topic. I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market.\n",
-       "\n",
-       "I think that it is important to understand the dynamics of the market"
+       "Summarize the content above in less than 140 characters.\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
