Finished Cooking course wirh Semantic Kernel

--- a/DeepLearning_Microsoft_SemanticKernel/StartCooking.ipynb
+++ b/DeepLearning_Microsoft_SemanticKernel/StartCooking.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
     "    kernel.add_text_completion_service(\"azureopenai\", AzureChatCompletion(deployment, endpoint, api_key))\n",
     "else:\n",
     "    api_key, org_id = (os.getenv('OPENAI_APIKEY'), None)\n",
-    "    kernel.add_text_completion_service(\"openai\", OpenAIChatCompletion(\"gpt-3.5-turbo-0301\", api_key, org_id))\n",
+    "    kernel.add_text_completion_service(\"openai\", OpenAIChatCompletion(\"gpt-3.5-turbo\", api_key, org_id))\n",
     "print(\"You made a kernel!\")\n",
     "\n",
     "\n",
@@ -137,7 +137,7 @@
     {
      "data": {
       "text/markdown": [
-       "### ✨ AI can help small businesses like a pizza store owner by analyzing data to spot patterns and improve revenue."
+       "### ✨ Error: (<ErrorCodes.ServiceError: 6>, 'OpenAIChatCompletion failed to complete the chat', InvalidRequestError(message='This is not a chat model and thus not supported in the v1/chat/completions endpoint. Did you mean to use v1/completions?', param='model', code=None, http_status=404, request_id=None))"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
