--- a/DeepLearning_Microsoft_SemanticKernel/StartCooking.ipynb
+++ b/DeepLearning_Microsoft_SemanticKernel/StartCooking.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "### ✨ Error: (<ErrorCodes.ServiceError: 6>, 'OpenAIChatCompletion failed to complete the chat', InvalidRequestError(message='This is not a chat model and thus not supported in the v1/chat/completions endpoint. Did you mean to use v1/completions?', param='model', code=None, http_status=404, request_id=None))"
+       "### ✨ AI can help a small pizza store owner increase revenue by analyzing data to identify patterns and make informed decisions."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
