--- a/Weaviate Implementation/L3_approximate_nearest_neighbours.ipynb
+++ b/Weaviate Implementation/L3_approximate_nearest_neighbours.ipynb
@@ -174,9 +174,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# !pip install weaviate-client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary /Users/akhilkumarp/.cache/weaviate-embedded did not exist. Downloading binary from https://github.com/weaviate/weaviate/releases/download/v1.22.3/weaviate-v1.22.3-Darwin-all.zip\n",
+      "Started /Users/akhilkumarp/.cache/weaviate-embedded: process ID 48153\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"action\":\"startup\",\"default_vectorizer_module\":\"none\",\"level\":\"info\",\"msg\":\"the default vectorizer modules is set to \\\"none\\\", as a result all new schema classes without an explicit vectorizer setting, will use this vectorizer\",\"time\":\"2023-11-08T18:20:49-05:00\"}\n",
+      "{\"action\":\"startup\",\"auto_schema_enabled\":true,\"level\":\"info\",\"msg\":\"auto schema enabled setting is set to \\\"true\\\"\",\"time\":\"2023-11-08T18:20:49-05:00\"}\n",
+      "{\"level\":\"warning\",\"msg\":\"Multiple vector spaces are present, GraphQL Explore and REST API list objects endpoint module include params has been disabled as a result.\",\"time\":\"2023-11-08T18:20:49-05:00\"}\n",
+      "{\"action\":\"grpc_startup\",\"level\":\"info\",\"msg\":\"grpc server listening at [::]:50060\",\"time\":\"2023-11-08T18:20:49-05:00\"}\n",
+      "{\"action\":\"restapi_management\",\"level\":\"info\",\"msg\":\"Serving weaviate at http://127.0.0.1:8079\",\"time\":\"2023-11-08T18:20:49-05:00\"}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import weaviate, json\n",
     "from weaviate import EmbeddedOptions\n",
@@ -190,9 +229,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully created the schema.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"action\":\"hnsw_vector_cache_prefill\",\"count\":1000,\"index_id\":\"mycollection_ALIJRQ7ANaj7\",\"level\":\"info\",\"limit\":1000000000000,\"msg\":\"prefilled vector cache\",\"time\":\"2023-11-08T18:20:50-05:00\",\"took\":44084}\n"
+     ]
+    }
+   ],
    "source": [
     "# resetting the schema. CAUTION: This will delete your collection \n",
     "# if client.schema.exists(\"MyCollection\"):\n",
@@ -220,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,9 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'data': {'Aggregate': {'MyCollection': [{'meta': {'count': 5}}]}}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Check number of objects\n",
     "response = (\n",
@@ -305,9 +367,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"title\": \"Second Object\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"title\": \"Fourth Object\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "response = (\n",
     "    client.query\n",
@@ -325,9 +402,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0.6506307,\n",
+      "      \"id\": \"870ae398-eef4-4d58-bca1-7884a49badcf\",\n",
+      "      \"vector\": [\n",
+      "        0.2,\n",
+      "        0.3,\n",
+      "        0.4,\n",
+      "        0.5,\n",
+      "        0.6,\n",
+      "        0.7\n",
+      "      ]\n",
+      "    },\n",
+      "    \"title\": \"Second Object\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0.8072029,\n",
+      "      \"id\": \"994a1f22-9aba-4de5-9377-da7f665324ad\",\n",
+      "      \"vector\": [\n",
+      "        0.4,\n",
+      "        0.41,\n",
+      "        0.42,\n",
+      "        0.43,\n",
+      "        0.44,\n",
+      "        0.45\n",
+      "      ]\n",
+      "    },\n",
+      "    \"title\": \"Fourth Object\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "response = (\n",
     "    client.query\n",
@@ -353,9 +469,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0.6506307,\n",
+      "      \"id\": \"870ae398-eef4-4d58-bca1-7884a49badcf\"\n",
+      "    },\n",
+      "    \"foo\": 77,\n",
+      "    \"title\": \"Second Object\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0.8284496,\n",
+      "      \"id\": \"f660f6bb-e2c1-47bc-a25c-7f0b2ed51fd2\"\n",
+      "    },\n",
+      "    \"foo\": 99,\n",
+      "    \"title\": \"First Object\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "response = (\n",
     "    client.query\n",
@@ -386,9 +527,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0\n",
+      "    },\n",
+      "    \"title\": \"Second Object\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0.051573634\n",
+      "    },\n",
+      "    \"title\": \"Fourth Object\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"_additional\": {\n",
+      "      \"distance\": 0.06506646\n",
+      "    },\n",
+      "    \"title\": \"First Object\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "response = (\n",
     "    client.query\n",
