Added KNN and Weaviate implementation with OPEN AI

--- a/Weaviate Implementation/L3_approximate_nearest_neighbours.ipynb
+++ b/Weaviate Implementation/L3_approximate_nearest_neighbours.ipynb
@@ -555,6 +555,33 @@
       "  }\n",
       "]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:22-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:23-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:23-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:24-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:24-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:25-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:25-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:26-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:26-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:27-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:27-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:28-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:28-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:29-05:00\"}\n",
+      "{\"action\":\"delegate.local_state.disk_usage\",\"level\":\"error\",\"msg\":\"no such file or directory\",\"time\":\"2023-11-08T18:25:29-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:29-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:30-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:30-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:31-05:00\"}\n",
+      "{\"action\":\"read_disk_use\",\"level\":\"error\",\"msg\":\"failed to read disk usage: no such file or directory\",\"path\":\"/Users/akhilkumarp/.local/share/weaviate\",\"time\":\"2023-11-08T18:25:31-05:00\"}\n",
+      "{\"action\":\"hnsw_vector_cache_prefill\",\"count\":1000,\"index_id\":\"question_iDOCSVY3WFoQ\",\"level\":\"info\",\"limit\":1000000000000,\"msg\":\"prefilled vector cache\",\"time\":\"2023-11-08T18:29:24-05:00\",\"took\":44000}\n"
+     ]
     }
    ],
    "source": [
