Added langchain agents with terminal access too..

--- a/PDF Chat/Chat_with_multiple_pdfs_Google_PaLM (1).ipynb
+++ b/PDF Chat/Chat_with_multiple_pdfs_Google_PaLM (1).ipynb
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 51,
       "metadata": {
         "id": "TCZSH6OYsW6A"
       },
@@ -360,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 52,
       "metadata": {
         "id": "mGOBwYepqxZk"
       },
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 53,
       "metadata": {
         "id": "GqFDvIFvrD3_"
       },
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,47 +414,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "module 'credentials' has no attribute 'PINECONE_API_KEY'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(credentials\u001b[38;5;241m.\u001b[39mPINECONE_API_KEY)\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'credentials' has no attribute 'PINECONE_API_KEY'"
-          ]
-        }
-      ],
-      "source": [
-        "print(os.getenv(\"PINECONE_API_KEY\"))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 56,
       "metadata": {
         "id": "46k7HddwtG9S"
       },
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "module 'credentials' has no attribute 'PINECONE_API_KEY'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m PINECONE_API_KEY \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPINECONE_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m, credentials\u001b[38;5;241m.\u001b[39mPINECONE_API_KEY)\n\u001b[1;32m      2\u001b[0m PINECONE_API_ENV \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPINECONE_API_ENV\u001b[39m\u001b[38;5;124m'\u001b[39m, credentials\u001b[38;5;241m.\u001b[39mPINECONE_API_ENV)\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'credentials' has no attribute 'PINECONE_API_KEY'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "PINECONE_API_KEY = os.environ.get('PINECONE_API_KEY', credentials.PINECONE_API_KEY)\n",
-        "PINECONE_API_ENV = os.environ.get('PINECONE_API_ENV', credentials.PINECONE_API_ENV)\n"
+        "PINECONE_API_KEY = os.environ.get('PINECONE_API_KEY', os.getenv('PINECONE_API_KEY'))\n",
+        "PINECONE_API_ENV = os.environ.get('PINECONE_API_ENV', os.getenv('PINECONE_API_ENV'))\n"
       ]
     },
     {
@@ -464,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 57,
       "metadata": {
         "id": "FrgW6s18uKOi"
       },
@@ -489,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 58,
       "metadata": {
         "id": "OLhm8k-vuMQP"
       },
@@ -497,13 +464,6 @@
       "source": [
         "# docsearch = Pinecone.from_texts([t.page_content for t in text_chunks], embeddings, index_name=index_name)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -516,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 60,
       "metadata": {
         "id": "t4ZfftjDugQC"
       },
@@ -536,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 61,
       "metadata": {
         "id": "YveNtHTyxloS"
       },
@@ -547,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 62,
       "metadata": {
         "id": "UUQt8hsSxofW"
       },
@@ -558,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -575,7 +535,7 @@
               " Document(page_content='▼\\nQuestions 9 and 10 refer to the following information.\\nat= 1,052+1.08\\nThespeedofasoundwaveinairdependsontheair\\ntemperature. Theformulaaboveshowstherelationship\\nbetweena,thespeedofasoundwave,infeetpersecond,\\nandt,theairtemperature,indegreesFahrenheit (°F).\\n9\\nWhichofthefollowingexpressestheairtemperature\\nintermsofthespeedofasoundwave?\\nA)ta=−1,052\\n1.08\\nB)ta=+1,052\\n1.08\\nC)ta=1,052−\\n1.08\\nD)ta=1.08\\n+1,052\\n10\\nAtwhichofthefollowingairtemperatureswillthe\\nspeedofasoundwavebeclosestto1,000feetper\\nsecond?')]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -595,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 64,
       "metadata": {
         "id": "Raf4vib9xsZW"
       },
@@ -606,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 65,
       "metadata": {
         "id": "aFZOSE4XyFlK"
       },
@@ -626,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 66,
       "metadata": {
         "id": "DkLUm1jZ3Bzg"
       },
@@ -644,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 67,
       "metadata": {
         "id": "gyty8Sbt4iAS"
       },
@@ -664,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 68,
       "metadata": {
         "id": "P6GtUpQyzkmf"
       },
@@ -675,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -688,10 +648,10 @@
         {
           "data": {
             "text/plain": [
-              "'YOLOv7 outperforms YOLOv4, YOLOR-CSP, PPYOLOE, YOLOv5-L, YOLOv5-X'"
+              "'YOLOv7 outperforms YOLOv4, YOLOR-CSP, PPYOLOE-L, YOLOv5-L, YOLOv5-X'"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 69,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -702,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 70,
       "metadata": {
         "id": "X5YEkIqVzs-c"
       },
@@ -713,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -729,7 +689,7 @@
               "'PhD in English'"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -740,7 +700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 72,
       "metadata": {
         "id": "o-EG-EYa0v2J"
       },
